# LLM_PDF_Translator

./: config.yaml  pyproject.toml  pyvenv.cfg  server.py
modules/translate/: LLMTranslateBase.py
utils/: __init__.py  gui.py
utils/database/: base.py  basic_info_db.py  file_db.py
