[tool.poetry]
name = "llm-pdf-translator"
version = "0.1.0"
description = ""
authors = ["poppanda <lightinshadow1110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.8.3"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
loguru = "^0.7.2"
openai = "^1.51.2"
opencv-python = "^4.10.0.84"
gradio = "^5.0.1"
pypdf2 = "^3.0.1"
matplotlib = "^3.9.2"
transformers = "^4.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
